Add Heterogeneous Datasets

--- a/notebooks/Dataset Exploration.ipynb
+++ b/notebooks/Dataset Exploration.ipynb
@@ -32,6 +32,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40a7aa12",
+   "metadata": {},
+   "source": [
+    "## Homogeneous, Social Network"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "3ef1b20a",
@@ -87,64 +95,125 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98a6dfcc",
+   "metadata": {},
+   "source": [
+    "## Heterogeneous, Recommender System"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "89fb8a70",
+   "id": "17186b1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch_geometric.datasets import DBLP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "58a3b7d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = DBLP(root=\"./data/DBLP\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f38ad1fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+       "HeteroData(\n",
+       "  \u001b[1mauthor\u001b[0m={\n",
+       "    x=[4057, 334],\n",
+       "    y=[4057],\n",
+       "    train_mask=[4057],\n",
+       "    val_mask=[4057],\n",
+       "    test_mask=[4057]\n",
+       "  },\n",
+       "  \u001b[1mpaper\u001b[0m={ x=[14328, 4231] },\n",
+       "  \u001b[1mterm\u001b[0m={ x=[7723, 50] },\n",
+       "  \u001b[1mconference\u001b[0m={ num_nodes=20 },\n",
+       "  \u001b[1m(author, to, paper)\u001b[0m={ edge_index=[2, 19645] },\n",
+       "  \u001b[1m(paper, to, author)\u001b[0m={ edge_index=[2, 19645] },\n",
+       "  \u001b[1m(paper, to, term)\u001b[0m={ edge_index=[2, 85810] },\n",
+       "  \u001b[1m(paper, to, conference)\u001b[0m={ edge_index=[2, 14328] },\n",
+       "  \u001b[1m(term, to, paper)\u001b[0m={ edge_index=[2, 85810] },\n",
+       "  \u001b[1m(conference, to, paper)\u001b[0m={ edge_index=[2, 14328] }\n",
+       ")"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_data.edge_label"
+    "dataset[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "84befbf1",
+   "execution_count": 9,
+   "id": "f651aacb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from torch_geometric.datasets import IMDB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "610cada8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = IMDB(root=\"./data/IMDB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "47505246",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HeteroData(\n",
+       "  \u001b[1mmovie\u001b[0m={\n",
+       "    x=[4278, 3066],\n",
+       "    y=[4278],\n",
+       "    train_mask=[4278],\n",
+       "    val_mask=[4278],\n",
+       "    test_mask=[4278]\n",
+       "  },\n",
+       "  \u001b[1mdirector\u001b[0m={ x=[2081, 3066] },\n",
+       "  \u001b[1mactor\u001b[0m={ x=[5257, 3066] },\n",
+       "  \u001b[1m(movie, to, director)\u001b[0m={ edge_index=[2, 4278] },\n",
+       "  \u001b[1m(movie, to, actor)\u001b[0m={ edge_index=[2, 12828] },\n",
+       "  \u001b[1m(director, to, movie)\u001b[0m={ edge_index=[2, 4278] },\n",
+       "  \u001b[1m(actor, to, movie)\u001b[0m={ edge_index=[2, 12828] }\n",
+       ")"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[0]"
+   ]
   }
  ],
  "metadata": {
