Combine Facebook dataset

--- a/notebooks/Dataset Exploration.ipynb
+++ b/notebooks/Dataset Exploration.ipynb
@@ -18,6 +18,7 @@
    "source": [
     "import torch\n",
     "import torch_geometric.transforms as T\n",
+    "from torch_geometric.loader import DataLoader\n",
     "from torch_geometric.datasets import SNAPDataset"
    ]
   },
@@ -70,12 +71,33 @@
     "dataset = SNAPDataset(\n",
     "    root=\"./data/SNAPDataset\", name=\"ego-facebook\", transform=transform\n",
     ")\n",
-    "train_data, val_data, test_data = dataset[0]"
+    "\n",
+    "train_data = next(iter(DataLoader([x[0] for x in dataset], batch_size=10)))\n",
+    "val_data = next(iter(DataLoader([x[1] for x in dataset], batch_size=10)))\n",
+    "test_data = next(iter(DataLoader([x[2] for x in dataset], batch_size=10)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "48f45fe7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataBatch(x=[4167, 1406], edge_index=[2, 160324], circle=[4233], circle_batch=[4233], edge_label=[17800], edge_label_index=[2, 17800], batch=[4167], ptr=[11])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "5adbbeaf",
    "metadata": {},
    "outputs": [],
@@ -107,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4dae6573",
    "metadata": {},
    "outputs": [
@@ -116,27 +138,39 @@
      "output_type": "stream",
      "text": [
       "HeteroData(\n",
-      "  \u001b[1mperson\u001b[0m={ x=[347, 1406] },\n",
+      "  \u001b[1mperson\u001b[0m={\n",
+      "    x=[4167, 1406],\n",
+      "    batch=[4167],\n",
+      "    ptr=[11]\n",
+      "  },\n",
       "  \u001b[1m(person, to, person)\u001b[0m={\n",
-      "    edge_index=[2, 4864],\n",
-      "    edge_label=[2432],\n",
-      "    edge_label_index=[2, 2432]\n",
+      "    edge_index=[2, 151430],\n",
+      "    edge_label=[75715],\n",
+      "    edge_label_index=[2, 75715]\n",
       "  }\n",
       ")\n",
       "HeteroData(\n",
-      "  \u001b[1mperson\u001b[0m={ x=[347, 1406] },\n",
+      "  \u001b[1mperson\u001b[0m={\n",
+      "    x=[4167, 1406],\n",
+      "    batch=[4167],\n",
+      "    ptr=[11]\n",
+      "  },\n",
       "  \u001b[1m(person, to, person)\u001b[0m={\n",
-      "    edge_index=[2, 4864],\n",
-      "    edge_label=[284],\n",
-      "    edge_label_index=[2, 284]\n",
+      "    edge_index=[2, 151430],\n",
+      "    edge_label=[8894],\n",
+      "    edge_label_index=[2, 8894]\n",
       "  }\n",
       ")\n",
       "HeteroData(\n",
-      "  \u001b[1mperson\u001b[0m={ x=[347, 1406] },\n",
+      "  \u001b[1mperson\u001b[0m={\n",
+      "    x=[4167, 1406],\n",
+      "    batch=[4167],\n",
+      "    ptr=[11]\n",
+      "  },\n",
       "  \u001b[1m(person, to, person)\u001b[0m={\n",
-      "    edge_index=[2, 5148],\n",
-      "    edge_label=[570],\n",
-      "    edge_label_index=[2, 570]\n",
+      "    edge_index=[2, 160324],\n",
+      "    edge_label=[17800],\n",
+      "    edge_label_index=[2, 17800]\n",
       "  }\n",
       ")\n"
      ]
@@ -166,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "17186b1f",
    "metadata": {},
    "outputs": [],
@@ -176,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "464c5fa8",
    "metadata": {},
    "outputs": [],
@@ -197,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "58a3b7d8",
    "metadata": {},
    "outputs": [],
@@ -229,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a56468aa",
    "metadata": {},
    "outputs": [
@@ -254,7 +288,7 @@
        ")"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "ea42ad7f",
    "metadata": {},
    "outputs": [
@@ -287,7 +321,7 @@
        ")"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "041626f4",
    "metadata": {},
    "outputs": [
@@ -320,7 +354,7 @@
        ")"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "f651aacb",
    "metadata": {},
    "outputs": [],
@@ -349,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "be1552ae",
    "metadata": {},
    "outputs": [],
@@ -370,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "610cada8",
    "metadata": {},
    "outputs": [],
@@ -394,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "47505246",
    "metadata": {},
    "outputs": [
@@ -419,7 +453,7 @@
        ")"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "4370968c",
    "metadata": {},
    "outputs": [
@@ -452,7 +486,7 @@
        ")"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "1424d51b",
    "metadata": {},
    "outputs": [
@@ -485,7 +519,7 @@
        ")"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
