--- a/notebooks/Dataset Exploration.ipynb
+++ b/notebooks/Dataset Exploration.ipynb
@@ -529,9 +529,178 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30d5f77d",
+   "metadata": {},
+   "source": [
+    "### LastFM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a8d59c82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch_geometric.datasets import LastFM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0f81b343",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = T.Compose([\n",
+    "    T.ToDevice(device),\n",
+    "    T.RemoveIsolatedNodes(),\n",
+    "    T.RandomLinkSplit(\n",
+    "        num_val=0.05, \n",
+    "        num_test=0.1, \n",
+    "        is_undirected=True, \n",
+    "        add_negative_train_samples=False,\n",
+    "        edge_types=[(\"artist\", \"to\", \"user\")]\n",
+    "    ),\n",
+    "    T.ToUndirected(),\n",
+    "])\n",
+    "\n",
+    "dataset = LastFM(root=\"../data/LastFM\", transform=transform)\n",
+    "\n",
+    "train_data, val_data, test_data = dataset[0]\n",
+    "\n",
+    "for data in train_data, val_data, test_data:\n",
+    "    del data[\"tag\"]\n",
+    "    del data[(\"artist\", \"to\", \"tag\")]\n",
+    "    del data[(\"tag\", \"to\", \"artist\")]\n",
+    "    del data[(\"tag\", \"rev_to\", \"artist\")]\n",
+    "    del data[(\"artist\", \"rev_to\", \"tag\")]\n",
+    "    del data[(\"user\", \"to\", \"artist\")]\n",
+    "    del data[(\"artist\", \"rev_to\", \"user\")]\n",
+    "    \n",
+    "    data[\"user\"].x = torch.randn((data[\"user\"].num_nodes, 32))\n",
+    "    data[\"artist\"].x = torch.randn((data[\"artist\"].num_nodes, 32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9593cb82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HeteroData(\n",
+       "  \u001b[1muser\u001b[0m={\n",
+       "    num_nodes=1892,\n",
+       "    x=[1892, 32]\n",
+       "  },\n",
+       "  \u001b[1martist\u001b[0m={\n",
+       "    num_nodes=17632,\n",
+       "    x=[17632, 32]\n",
+       "  },\n",
+       "  \u001b[1m(user, to, user)\u001b[0m={ edge_index=[2, 25434] },\n",
+       "  \u001b[1m(artist, to, user)\u001b[0m={\n",
+       "    edge_index=[2, 55237],\n",
+       "    edge_label=[55237],\n",
+       "    edge_label_index=[2, 55237]\n",
+       "  },\n",
+       "  \u001b[1m(user, rev_to, artist)\u001b[0m={\n",
+       "    edge_index=[2, 55237],\n",
+       "    edge_label=[55237]\n",
+       "  }\n",
+       ")"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a50a61e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HeteroData(\n",
+       "  \u001b[1muser\u001b[0m={\n",
+       "    num_nodes=1892,\n",
+       "    x=[1892, 32]\n",
+       "  },\n",
+       "  \u001b[1martist\u001b[0m={\n",
+       "    num_nodes=17632,\n",
+       "    x=[17632, 32]\n",
+       "  },\n",
+       "  \u001b[1m(user, to, user)\u001b[0m={ edge_index=[2, 25434] },\n",
+       "  \u001b[1m(artist, to, user)\u001b[0m={\n",
+       "    edge_index=[2, 55237],\n",
+       "    edge_label=[6498],\n",
+       "    edge_label_index=[2, 6498]\n",
+       "  },\n",
+       "  \u001b[1m(user, rev_to, artist)\u001b[0m={ edge_index=[2, 55237] }\n",
+       ")"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "682b921e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HeteroData(\n",
+       "  \u001b[1muser\u001b[0m={\n",
+       "    num_nodes=1892,\n",
+       "    x=[1892, 32]\n",
+       "  },\n",
+       "  \u001b[1martist\u001b[0m={\n",
+       "    num_nodes=17632,\n",
+       "    x=[17632, 32]\n",
+       "  },\n",
+       "  \u001b[1m(user, to, user)\u001b[0m={ edge_index=[2, 25434] },\n",
+       "  \u001b[1m(artist, to, user)\u001b[0m={\n",
+       "    edge_index=[2, 58486],\n",
+       "    edge_label=[12996],\n",
+       "    edge_label_index=[2, 12996]\n",
+       "  },\n",
+       "  \u001b[1m(user, rev_to, artist)\u001b[0m={ edge_index=[2, 58486] }\n",
+       ")"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f01f37a7",
+   "id": "0fd4f1cf",
    "metadata": {},
    "outputs": [],
    "source": []
